--- a/depoimentos.html
+++ b/depoimentos.html
@@ -15,6 +15,18 @@
  	<input type="button" id="botao" value="Lei e Direitos das Mulheres" onclick="window.location.href='mulheres.html'">
  	<input type="button" id="botao" value="Mapeamento" onclick="window.location.href='mapa.html'">
  	<input type="button" id="botao" value="Galeria" onclick="window.location.href='galeria.html'">
-	<input type="button" id="botao" value="Contato" onclick="window.location.href='contato.html'"> 
+	<input type="button" id="botao" value="Contato" onclick="window.location.href='#rodape'"> 
+	<input type="button" id="botao" value="Sobre o site" onclick="window.location.href='sobre.html'">
+
 </div>
 </div>
+
+<div id="rodape">
+		<h3> Contato </h3>
+		<a href="mailto:contatoisy.site@gmail.com"> 
+			<img src="img/email.svg" id="imge"> 
+			<p id="textoR">Envie um e-mail para ISY</p>
+		</a>
+
+	</div>
+	
