--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <meta charset="UTF-8">
-	<title>ISY</title>
-	<link rel="icon" type="imagem/png" href="img/3i.png" />
-	<link href="css/style1.css" rel="stylesheet">
-	
+<title>ISY</title>
+<link rel="icon" type="imagem/png" href="img/icon.png" />
+<link href="css/style1.css" rel="stylesheet">
 
-	
-</div>
- <div id="box1">
- 	<h1> ISY - I support you </h1>
- 	<div class= "btn btn-outline-dark">
 
- 	<input type="button" id="botao" value="Conta" onclick="window.location.href='conta.html'">
- 	<input type="button" id="botao" value="Depoimentos" onclick="window.location.href='depoimentos.html'">
- 	<input type="button" id="botao" value="Leis e Direitos das Mulheres" onclick="window.location.href='mulheres.html'">
- 	<input type="button" id="botao" value="Mapeamento" onclick="window.location.href='mapa.html'">
- 	<input type="button" id="botao" value="Galeria" onclick="window.location.href='galeria.html'">
-	<input type="button" id="botao" value="Contato" onclick="window.location.href='contato.html'"> 
-	<!-- função descer pág, arrumar -->
-  
+
 </div>
- </div>
+<div id="box1">
+	<h1> ISY - I support you </h1>
+	<div class= "btn btn-outline-dark">
+
+		<input type="button" id="botao" value="Conta" onclick="window.location.href='conta.html'">
+		<input type="button" id="botao" value="Depoimentos" onclick="window.location.href='depoimentos.html'">
+		<input type="button" id="botao" value="Leis e Direitos das Mulheres" onclick="window.location.href='mulheres.html'">
+		<input type="button" id="botao" value="Mapeamento" onclick="window.location.href='mapa.html'">
+		<input type="button" id="botao" value="Galeria" onclick="window.location.href='galeria.html'">
+		<input type="button" id="botao" value="Contato" onclick="window.location.href='#rodape'"> 
+		<input type="button" id="botao" value="Sobre o site" onclick="window.location.href='sobre.html'">
+		
+
+	</div>
+</div>
 <body>
 	<div id="box2">
- 		<h2> Sobre o site </h2>
- 		
- 		<h3> O desenvolvimento desse site foi pensado baseando-se nos relatos de assédio sofrido por mulheres na sua convivência em sociedade,visando amenizar quaisquer problemas relacionados a todo tipo de assédio. Também com o intuito de proporcionar apoio umas as outras, apresentando um local onde podem se sentir confortável para ler e relatar seus depoimentos anonimamente ou não.
- 		<br>
- 		<h3>É importante entender o assédio, entender onde e como se apresenta  e conhecer seus direitos como mulher, para que, se vier a passar por uma situação desagradável esteja ciente de seus respectivos direitos e compreenda que não estará sozinha.
- 		<br><br>
-O nosso site será usado como uma ferramenta a mais que vem para somar com projetos como o mete a colher( <a href="https://meteacolher.org/">https://meteacolher.org/</a> ) ou até mesmo o papel desempenhado pela delegacia da mulher, para ser mais uma plataforma de colaboração na denúncia e no diálogo entre mulheres que enfrentam essas situações em diversos lugares e buscam um meio para relatar sobre o ocorrido e buscar ajuda psicológica e judiciária, que será disponibilizada na nossa plataforma profissionais destes ramos que se propuseram a participar desta iniciativa. 
-<br><br>
-Nos baseamos em pesquisas realizadas com mulheres para validar a importância  de um ambiente adequado para relatarem suas experiências e seu convívio  social da forma mais segura e privada, e com base nas respostas adquiridas construímos nosso site. 
-</h3>
+		<video controls> 
+			<source src="video/isy.mp4" type="video/mp4"/>
+		</video>
+		<br>
+		<h3>Nossa plataforma foi criada pensando na convivência das mulheres na sociedade, buscando amenizar  problemas relacionados ao assédio, promovendo apoio umas as outras  em um local onde possam se sentir confortáveis para conversar.
+		O site será usado na colaboração da denúncia e no diálogo entre mulheres que buscam ajuda </h3>
+		<br>
 	</div>
+	<div id="rodape">
+		<h3> Contato </h3>
+		<a href="mailto:contatoisy.site@gmail.com"> 
+			<img src="img/email.svg" id="imge"> 
+			<p id="textoR">Envie um e-mail para ISY</p>
+		</a>
+
+	</div>
+
+</body>
