--- a/mapa.html
+++ b/mapa.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 	<title>ISY</title>
-	<link rel="icon" type="imagem/png" href="img/3i.png" />
+	<link rel="icon" type="imagem/png" href="img/icon.png" />
 	<link href="css/style1.css" rel="stylesheet">
 	
 
@@ -10,9 +10,24 @@
  	<h1> ISY - I support you </h1>
  	<div class= "btn btn-outline-dark">
 
+ 	<input type="button" id="botao" value="Home" onclick="window.location.href='index.html'">
  	<input type="button" id="botao" value="Conta" onclick="window.location.href='conta.html'">
  	<input type="button" id="botao" value="Depoimentos" onclick="window.location.href='depoimentos.html'">
  	<input type="button" id="botao" value="Lei e Direitos das Mulheres" onclick="window.location.href='mulheres.html'">
- 	<input type="button" id="botao" value="Mapeamento" onclick="window.location.href='mapa.html'">
  	<input type="button" id="botao" value="Galeria" onclick="window.location.href='galeria.html'">
-	<input type="button" id="botao" value="Contato" onclick="window.location.href='contato.html'"> 
+	<input type="button" id="botao" value="Contato" onclick="window.location.href='#rodape'"> 
+	<input type="button" id="botao" value="Sobre o site" onclick="window.location.href='sobre.html'">
+
+
+
+
+
+
+	<div id="rodape">
+		<h3> Contato </h3>
+		<a href="mailto:contatoisy.site@gmail.com"> 
+			<img src="img/email.svg" id="imge"> 
+			<p id="textoR">Envie um e-mail para ISY</p>
+		</a>
+
+	</div>
