--- a/mulheres.html
+++ b/mulheres.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 	<title>ISY</title>
-	<link rel="icon" type="imagem/png" href="img/3i.png" />
+	<link rel="icon" type="imagem/png" href="img/icon.png" />
 	<link href="css/style1.css" rel="stylesheet">
 	
 
@@ -20,7 +20,9 @@
  	<input type="button" id="botao" value="Lei e Direitos das Mulheres" onclick="window.location.href='mulheres.html'">
  	<input type="button" id="botao" value="Mapeamento" onclick="window.location.href='mapa.html'">
  	<input type="button" id="botao" value="Galeria" onclick="window.location.href='galeria.html'">
-	<input type="button" id="botao" value="Contato" onclick="window.location.href='contato.html'"> 
+		<input type="button" id="botao" value="Contato" onclick="window.location.href='#rodape'"> 
+	<input type="button" id="botao" value="Sobre o site" onclick="window.location.href='sobre.html'">
+
 </div>
 </div>
 
@@ -30,7 +32,7 @@
  		<h3> O Decreto-Lei nº 10.224, de 15 de maio de 2001, acrescenta o artigo nº 216-A ao Código Penal Brasileiro, apresenta o seguinte texto: "Constranger alguém com o intuito de obter vantagem ou favorecimento sexual, prevalecendo-se o agente da sua condição de superior hierárquico ou ascendência inerentes ao exercício de emprego, cargo ou função."
 A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
 
- <img src="img/wm.jpg">
+ <img src="img/wm.jpg" id="imgm">
 <br> 
 <h2>O que é assédio? </h2>
 <h3>O assédio é definido pelo constrangimento de um indivíduo na intenção de obter vantagem ou favorecimento sexual, prevalecendo-se o agente de sua condição de superior. Vale ressaltar que para ser classificado como assédio apenas quando a vítima não se encontra conivente com a situação. 
@@ -45,5 +47,15 @@ O <mark>assédio verbal</mark> pode ser manifestado em diversos contextos, envol
 O <mark>assédio moral</mark> se trata da humilhação sofrida pela vítima afetando sua dignidade, é bem comum do ambiente de trabalho em situações que consiste na humilhação de um funcionário por exemplo, que é exposto por seus patrões ou até mesmo por outros funcionários. Não existe lei específica no Brasil que ampare este tipo de assédio, mas em alguns casos, podem ser classificados como crime de danos morais.
 <br><br>
 O <mark>assédio sexual</mark> caracteriza-se pelo não consentimento da vítima na realização de um ação ou ato sexual, este tipo inclui desde o contato físico em si até um comentário classificado como pejorativo na intenção de praticar o ato. Já existe uma lei no Brasil para  punir quem comete tal crime
+</h3>
+	</div>
+
+<div id="rodape">
+		<h3> Contato </h3>
+		<a href="mailto:contatoisy.site@gmail.com"> 
+			<img src="img/email.svg" id="imge"> 
+			<p id="textoR">Envie um e-mail para ISY</p>
+		</a>
 
 	</div>
+</body>
