--- a/conta.html
+++ b/conta.html
@@ -1,42 +1,134 @@
 <meta charset="UTF-8">
-	<title>ISY</title>
-	<link rel="icon" type="imagem/png" href="img/3i.png" />
-	<link href="css/style1.css" rel="stylesheet">
-	
+<title>ISY</title>
+<link rel="icon" type="imagem/png" href="img/icon.png" />
+<link href="css/style1.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
-	
-</div>
- <div id="box1">
- 	<h1> ISY - I support you </h1>
- 	<div class= "btn btn-outline-dark">
 
- 	<input type="button" id="botao" value="Home" onclick="window.location.href='index.html'">
- 	<input type="button" id="botao" value="Depoimentos" onclick="window.location.href='depoimentos.html'">
- 	<input type="button" id="botao" value="Lei e Direitos das Mulheres" onclick="window.location.href='mulheres.html'">
- 	<input type="button" id="botao" value="Mapeamento" onclick="window.location.href='mapa.html'">
- 	<input type="button" id="botao" value="Galeria" onclick="window.location.href='galeria.html'">
-	<input type="button" id="botao" value="Contato" onclick="window.location.href='contato.html'"> 
-  
 </div>
+<div id="box1">
+  <h1> ISY - I support you </h1>
+  <div class= "btn btn-outline-dark">
+
+    <input type="button" id="botao" value="Home" onclick="window.location.href='index.html'">
+    <input type="button" id="botao" value="Depoimentos" onclick="window.location.href='depoimentos.html'">
+    <input type="button" id="botao" value="Lei e Direitos das Mulheres" onclick="window.location.href='mulheres.html'">
+    <input type="button" id="botao" value="Mapeamento" onclick="window.location.href='mapa.html'">
+    <input type="button" id="botao" value="Galeria" onclick="window.location.href='galeria.html'">
+    <input type="button" id="botao" value="Contato" onclick="window.location.href='#rodape'"> 
+    <input type="button" id="botao" value="Sobre o site" onclick="window.location.href='sobre.html'">
+
+
+  </div>
 </div>
 <body>
+  <div class= "container-fluid"> 
+    <div class="conta">
+    <div class="form-group">
+    <label for="exampleFormControlTextarea1">Nome</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <label for="exampleFormControlSelect1">Select de exemplo</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
+      <option>14</option>
+      <option>15</option>
+      <option>16</option>
+      <option>17</option>
+      <option>18</option>
 
-  <div class="form-group">
-    <label for="exampleInputEmail1">Endereço de email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
-    <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+    </select>
   </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Senha</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-  </div>
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Enviar</button>
-</form>
+      <label for="exampleInputEmail1">Endereço de email</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
+      <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Senha</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+    </div>
+    <button type="submit" class="btn btn-primary">Enviar</button>
+  </form>
+</div>
+</div>
+</div>
 
 
-	</div>
+<div id="rodape">
+    <h3> Contato </h3>
+    <a href="mailto:contatoisy.site@gmail.com"> 
+      <img src="img/email.svg" id="imge"> 
+      <p id="textoR">Envie um e-mail para ISY</p>
+    </a>
+
+  </div>
+
 </body>
