Atualização do projeto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1> ISY - I support you </h1>
 	<div class= "btn btn-outline-dark">
 
-		<input type="button" id="botao" value="Conta" onclick="window.location.href='conta.html'">
+		<input type="button" class="botao" value="Conta" onclick="window.location.href='conta.html'">
 		<input type="button" id="botao" value="Depoimentos" onclick="window.location.href='depoimentos.html'">
 		<input type="button" id="botao" value="Leis e Direitos das Mulheres" onclick="window.location.href='mulheres.html'">
 		<input type="button" id="botao" value="Mapeamento" onclick="window.location.href='mapa.html'">
