--- a/conta.html
+++ b/conta.html
@@ -1,126 +1,145 @@
-<meta charset="UTF-8">
-<title>ISY</title>
-<link rel="icon" type="imagem/png" href="img/icon.png" />
-<link href="css/style1.css" rel="stylesheet">
-<link href="css/bootstrap.min.css" rel="stylesheet">
-
-
-</div>
-<div id="box1">
-  <h1> ISY - I support you </h1>
-  <div class= "btn btn-outline-dark">
-
-    <input type="button" id="botao" value="Home" onclick="window.location.href='index.html'">
-    <input type="button" id="botao" value="Depoimentos" onclick="window.location.href='depoimentos.html'">
-    <input type="button" id="botao" value="Lei e Direitos das Mulheres" onclick="window.location.href='mulheres.html'">
-    <input type="button" id="botao" value="Mapeamento" onclick="window.location.href='mapa.html'">
-    <input type="button" id="botao" value="Galeria" onclick="window.location.href='galeria.html'">
-    <input type="button" id="botao" value="Contato" onclick="window.location.href='#rodape'"> 
-    <input type="button" id="botao" value="Sobre o site" onclick="window.location.href='sobre.html'">
-
-
-  </div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>ISY</title>
+  <link rel="icon" type="imagem/png" href="img/icon.png" />
+  <link href="css/style1.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+</head>
 <body>
-  <div class= "container-fluid"> 
-    <div class="conta">
-    <div class="form-group">
-    <label for="exampleFormControlTextarea1">Nome</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    <label for="exampleFormControlSelect1">Select de exemplo</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>14</option>
-      <option>15</option>
-      <option>16</option>
-      <option>17</option>
-      <option>18</option>
-      <option>19</option>
-      <option>20</option>
-      <option>21</option>
-      <option>22</option>
-      <option>23</option>
-      <option>24</option>
-      <option>25</option>
-      <option>26</option>
-      <option>27</option>
-      <option>28</option>
-      <option>29</option>
-      <option>30</option>
-      <option>31</option>
-      <option>32</option>
-      <option>33</option>
-      <option>34</option>
-      <option>35</option>
-      <option>36</option>
-      <option>37</option>
-      <option>38</option>
-      <option>39</option>
-      <option>40</option>
-      <option>41</option>
-      <option>42</option>
-      <option>43</option>
-      <option>44</option>
-      <option>45</option>
-      <option>46</option>
-      <option>47</option>
-      <option>48</option>
-      <option>49</option>
-      <option>50</option>
-      <option>51</option>
-      <option>52</option>
-      <option>53</option>
-      <option>54</option>
-      <option>55</option>
-      <option>56</option>
-      <option>57</option>
-      <option>58</option>
-      <option>59</option>
-      <option>60</option>
-      <option>61</option>
-      <option>62</option>
-      <option>63</option>
-      <option>64</option>
-      <option>65</option>
-      <option>66</option>
-      <option>67</option>
-      <option>68</option>
-      <option>69</option>
-      <option>70</option>
-      <option>71</option>
-      <option>72</option>
-      <option>73</option>
-      <option>74</option>
-      <option>75</option>
-      <option>76</option>
-      <option>77</option>
-      <option>78</option>
-      <option>79</option>
-      <option>80</option>
-      
-    </select>
+  <div class = "container-fluid">
+    <div class = "titulo">
+      <h1> ISY - I support you </h1>
+    </div>
+    <nav class=" menu navbar navbar-expand-lg navbar-light">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active botao">
+            <a class="" href="index.html">Home <span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item active botao">
+            <a class="nav-link" href="depoimentos.html">Depoimentos <span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item botao">
+            <a class="nav-link" href="mulheres.html">Leis e Direitos das Mulheres <span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item botao">
+            <a class="nav-link" href="mapa.html">Mapeamento <span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item botao">
+            <a class="nav-link" href="galeria.html">Galeria <span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item botao">
+            <a class="nav-link" href="#rodape.html">Contato <span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item botao" >
+            <a class="nav-link" href="sobre.html">Sobre o site <span class="sr-only"></span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class= "container-fluid"> 
+      <div class="conta">
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Nome</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <label for="exampleFormControlSelect1">Idade</label>
+          <select class="form-control" id="exampleFormControlSelect1">
+            <option>14</option>
+            <option>15</option>
+            <option>16</option>
+            <option>17</option>
+            <option>18</option>
+            <option>19</option>
+            <option>20</option>
+            <option>21</option>
+            <option>22</option>
+            <option>23</option>
+            <option>24</option>
+            <option>25</option>
+            <option>26</option>
+            <option>27</option>
+            <option>28</option>
+            <option>29</option>
+            <option>30</option>
+            <option>31</option>
+            <option>32</option>
+            <option>33</option>
+            <option>34</option>
+            <option>35</option>
+            <option>36</option>
+            <option>37</option>
+            <option>38</option>
+            <option>39</option>
+            <option>40</option>
+            <option>41</option>
+            <option>42</option>
+            <option>43</option>
+            <option>44</option>
+            <option>45</option>
+            <option>46</option>
+            <option>47</option>
+            <option>48</option>
+            <option>49</option>
+            <option>50</option>
+            <option>51</option>
+            <option>52</option>
+            <option>53</option>
+            <option>54</option>
+            <option>55</option>
+            <option>56</option>
+            <option>57</option>
+            <option>58</option>
+            <option>59</option>
+            <option>60</option>
+            <option>61</option>
+            <option>62</option>
+            <option>63</option>
+            <option>64</option>
+            <option>65</option>
+            <option>66</option>
+            <option>67</option>
+            <option>68</option>
+            <option>69</option>
+            <option>70</option>
+            <option>71</option>
+            <option>72</option>
+            <option>73</option>
+            <option>74</option>
+            <option>75</option>
+            <option>76</option>
+            <option>77</option>
+            <option>78</option>
+            <option>79</option>
+            <option>80</option>
+
+          </select>
+        </div>
+        <label for="exampleInputEmail1">Endereço de email</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
+        <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Senha</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
   </div>
-      <label for="exampleInputEmail1">Endereço de email</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
-      <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Senha</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-    </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
-  </form>
-</div>
 </div>
 </div>
 
 
 <div id="rodape">
-    <h3> Contato </h3>
-    <a href="mailto:contatoisy.site@gmail.com"> 
-      <img src="img/email.svg" id="imge"> 
-      <p id="textoR">Envie um e-mail para ISY</p>
-    </a>
+  <h3> Contato </h3>
+  <a href="mailto:contatoisy.site@gmail.com"> 
+    <img src="img/email.svg" id="imge"> 
+    <p id="textoR">Envie um e-mail para ISY</p>
+  </a>
 
-  </div>
+</div>
 
 </body>
+
+</html>
