--- a/conta.html
+++ b/conta.html
@@ -10,13 +10,13 @@
 <body>
   <div class = "container-fluid">
     <div class = "titulo">
-      <h1> ISY - I support you </h1>
+      <p> ISY - I support you </p>
     </div>
-    <nav class=" menu navbar navbar-expand-lg navbar-light">
+    <nav class="menu navbar navbar-expand-lg">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active botao">
-            <a class="" href="index.html">Home <span class="sr-only"></span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
           </li>
           <li class="nav-item active botao">
             <a class="nav-link" href="depoimentos.html">Depoimentos <span class="sr-only"></span></a>
