--- a/conta.html
+++ b/conta.html
@@ -8,6 +8,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="scripts/script.js"> </script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <p> ISY - I support you </p>
   </div>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">ISY</a>
+    <a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -50,7 +51,7 @@
   </nav>
   <div class="container-fluid">
     <div class="conta">
-      <form>
+      <form onsubmit="enviaformulario(this)">
         <div class="form-group">
           <label for="Nome">Nome</label>
           <input type="text" class="form-control" id="nome"  placeholder="Digite seu nome">
@@ -61,14 +62,14 @@
         </div>
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" class="form-control" id="email"  placeholder="Enter email">
+          <input type="email" class="form-control" id="email"  placeholder="Digite seu email">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
           <input type="password" class="form-control" id="password" placeholder="Password">
         </div>
         
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
   </div>
   </div>
