--- a/mulheres.html
+++ b/mulheres.html
@@ -1,52 +1,76 @@
+<!DOCTYPE html>
+<html>
+
+<head>
 <meta charset="UTF-8">
-	<title>ISY</title>
-	<link rel="icon" type="imagem/png" href="img/icon.png" />
-	<link href="css/style1.css" rel="stylesheet">
-	
+<title>ISY</title>
+<link rel="icon" type="imagem/png" href="img/icon.png" />
+<link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
 
-
-</div>
-<div id="box1">
- 	<h1> ISY - I support you </h1>
- 	<div class= "btn btn-outline-dark">
-
- 	<input type="button" id="botao" value="Home" onclick="window.location.href='index.html'">
- 	<input type="button" id="botao" value="Depoimentos" onclick="window.location.href='depoimentos.html'">
- 	<input type="button" id="botao" value="Lei e Direitos das Mulheres" onclick="window.location.href='mulheres.html'">
- 	<input type="button" id="botao" value="Mapeamento" onclick="window.location.href='mapa.html'">
- 	<input type="button" id="botao" value="Galeria" onclick="window.location.href='galeria.html'">
-	<input type="button" id="botao" value="Contato" onclick="window.location.href='#rodape'"> 
-	<input type="button" id="botao" value="Sobre o site" onclick="window.location.href='sobre.html'">
-
-</div>
-</div>
-
-	<body>
-	<div id="box2">
- 		<br>
- 		<h3> O Decreto-Lei nº 10.224, de 15 de maio de 2001, acrescenta o artigo nº 216-A ao Código Penal Brasileiro, apresenta o seguinte texto: "Constranger alguém com o intuito de obter vantagem ou favorecimento sexual, prevalecendo-se o agente da sua condição de superior hierárquico ou ascendência inerentes ao exercício de emprego, cargo ou função."
-A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
-
- <img src="img/wm.jpg" id="imgm">
-<br> 
-<h2>O que é assédio? </h2>
-<h3>O assédio é definido pelo constrangimento de um indivíduo na intenção de obter vantagem ou favorecimento sexual, prevalecendo-se o agente de sua condição de superior. Vale ressaltar que para ser classificado como assédio apenas quando a vítima não se encontra conivente com a situação. 
-Tais situações podem ser repetidas ou realizadas uma única vez. 
-<br><br>
-Este, pode ser manifestado de diversas formas, o primeiro deles é o <mark>Assédio psicológico</mark>, uma das formas mais veladas de assédio pois muitas vezes as vítimas levam um tempo para perceber que estão sendo assediadas essa forma de assédio se dá através de insultos, comportamentos ofensivos, intimidação sofrida pela vítima ou através do abuso de poder. 
-<br><br>
-O <mark>assédio virtual</mark> é realizado por indivíduos que, por meios tecnológicos, procuram ofender, desrespeitar ou difamar a vítima ou as vítimas. Comentários pejorativas, exposição de fotos ou dados pessoais,discursos de ódio e ofensas são as principais coisas que classificam o Assédio virtual.
-<br><br>
-O <mark>assédio verbal</mark> pode ser manifestado em diversos contextos, envolvendo pessoas próximas como família e amigos ou estranhos. Xingamentos, insultos, provocações, ameaças e vocabulário inapropriado são características deste tipo de assédio. O assédio verbal em específico e protegido pela lei da injúria no Brasil, a vítima que sofreu essa situação pode recorrer a justiça e ser indenizada por danos morais. 
-<br><br>
-O <mark>assédio moral</mark> se trata da humilhação sofrida pela vítima afetando sua dignidade, é bem comum do ambiente de trabalho em situações que consiste na humilhação de um funcionário por exemplo, que é exposto por seus patrões ou até mesmo por outros funcionários. Não existe lei específica no Brasil que ampare este tipo de assédio, mas em alguns casos, podem ser classificados como crime de danos morais.
-<br><br>
-O <mark>assédio sexual</mark> caracteriza-se pelo não consentimento da vítima na realização de um ação ou ato sexual, este tipo inclui desde o contato físico em si até um comentário classificado como pejorativo na intenção de praticar o ato. Já existe uma lei no Brasil para  punir quem comete tal crime
-</h3>
+<body>
+  <div class="titulo">
+    <p> ISY - I support you </p>
+  </div>
+  <nav class="navbar navbar-expand-lg navbar-light pb-4 mb-4">
+    <a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav m r-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="depoimentos.html">Depoimentos<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="conta.html">Conta<span
+          class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="mapa.html">Mapeamento<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="galeria.html">Galeria<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#rodape.html">Contato<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+    </div>
+</nav>
+	<h3 class="texto_padrao"> O Decreto-Lei nº 10.224, de 15 de maio de 2001, acrescenta o artigo nº 216-A ao Código Penal Brasileiro, apresenta o seguinte texto: "Constranger alguém com o intuito de obter vantagem ou favorecimento sexual, prevalecendo-se o agente da sua condição de superior hierárquico ou ascendência inerentes ao exercício de emprego, cargo ou função."
+		A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
+		<br>
+		<img src="img/wm.jpg" id="imgm">
+		<br> 
+		<h2 class="subtitulo">O que é assédio? </h2>
+		<h3 class="texto_padrao">O assédio é definido pelo constrangimento de um indivíduo na intenção de obter vantagem ou favorecimento sexual, prevalecendo-se o agente de sua condição de superior. Vale ressaltar que para ser classificado como assédio apenas quando a vítima não se encontra conivente com a situação. 
+			Tais situações podem ser repetidas ou realizadas uma única vez. 
+			<br><br>
+			Este, pode ser manifestado de diversas formas, o primeiro deles é o <mark>Assédio psicológico</mark>, uma das formas mais veladas de assédio pois muitas vezes as vítimas levam um tempo para perceber que estão sendo assediadas essa forma de assédio se dá através de insultos, comportamentos ofensivos, intimidação sofrida pela vítima ou através do abuso de poder. 
+			<br><br>
+			O <mark>assédio virtual</mark> é realizado por indivíduos que, por meios tecnológicos, procuram ofender, desrespeitar ou difamar a vítima ou as vítimas. Comentários pejorativas, exposição de fotos ou dados pessoais,discursos de ódio e ofensas são as principais coisas que classificam o Assédio virtual.
+			<br><br>
+			O <mark>assédio verbal</mark> pode ser manifestado em diversos contextos, envolvendo pessoas próximas como família e amigos ou estranhos. Xingamentos, insultos, provocações, ameaças e vocabulário inapropriado são características deste tipo de assédio. O assédio verbal em específico e protegido pela lei da injúria no Brasil, a vítima que sofreu essa situação pode recorrer a justiça e ser indenizada por danos morais. 
+			<br><br>
+			O <mark>assédio moral</mark> se trata da humilhação sofrida pela vítima afetando sua dignidade, é bem comum do ambiente de trabalho em situações que consiste na humilhação de um funcionário por exemplo, que é exposto por seus patrões ou até mesmo por outros funcionários. Não existe lei específica no Brasil que ampare este tipo de assédio, mas em alguns casos, podem ser classificados como crime de danos morais.
+			<br><br>
+			O <mark>assédio sexual</mark> caracteriza-se pelo não consentimento da vítima na realização de um ação ou ato sexual, este tipo inclui desde o contato físico em si até um comentário classificado como pejorativo na intenção de praticar o ato. Já existe uma lei no Brasil para  punir quem comete tal crime
+		</h3>
+		<br>
 	</div>
 
-<div id="rodape">
-		<h3> Contato </h3>
+	<div id="rodape">
+		<h3 class="texto_contato"> Contato </h3>
 		<a href="mailto:contatoisy.site@gmail.com"> 
 			<img src="img/email.svg" id="imge"> 
 			<p id="textoR">Envie um e-mail para ISY</p>
