--- a/conta.html
+++ b/conta.html
@@ -16,6 +16,8 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active botao">
+          <div class="nav-wrapper">
+           <ul class="side-nav" id="menu-mobile">
             <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
           </li>
           <li class="nav-item active botao">
@@ -37,6 +39,8 @@
             <a class="nav-link" href="sobre.html">Sobre o site <span class="sr-only"></span></a>
           </li>
         </ul>
+      </div>
+    </ul>
       </div>
     </nav>
     <div class= "container-fluid"> 
