--- a/conta.html
+++ b/conta.html
@@ -76,13 +76,14 @@
 
 
   <div id="rodape">
-    <h3> Contato </h3>
-    <a href="mailto:contatoisy.site@gmail.com">
-      <img src="img/email.svg" id="imge">
+    <h3 class="texto_contato"> Contato </h3>
+    <a href="mailto:contatoisy.site@gmail.com"> 
+      <img src="img/email.svg" id="imge"> 
       <p id="textoR">Envie um e-mail para ISY</p>
     </a>
 
   </div>
+
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
   crossorigin="anonymous"></script>
