--- a/galeria.html
+++ b/galeria.html
@@ -51,66 +51,205 @@
 		<div class="row">
 			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 				<a class="thumbnail" href="img/juntas.jpg">
-					<img class="img-thumbnail" src="img/juntas.jpg" alt="imagem" />
+					<img class="img-thumbnail" src="img/juntas.jpg" alt="Ilustração de cinco mulheres diferentes de costas" />
 				</a>
-				<p class="text-center">Teste de imagem</p>
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a class="thumbnail" href="img/bruxas.jpg">
-					<img class="img-thumbnail" src="img/bruxas.jpg" alt="imagem" />
-				</a>
-				<p class="text-center">Teste de imagem</p>
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-				<a class="thumbnail" href="img/corpo.jpg">
-					<img class="img-thumbnail" src="img/corpo.jpg" alt="imagem" />
-				</a>
-				<p class="text-center">Teste de imagem</p>
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-				<a class="thumbnail" href="img/uniao.jpg">
-					<img class="img-thumbnail" src="img/uniao.jpg" alt="imagem" />
-				</a>
-				<p class="text-center">Teste de imagem</p>
-				</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a class="thumbnail" href="img/simone.jpg">
-					<img class="img-thumbnail" src="img/simone.jpg" alt="imagem" />
-				</a>
-				<p class="text-center">Teste de imagem</p>
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a class="thumbnail" href="img/grl.jpeg">
-					<img class="img-thumbnail" src="img/grl.jpeg" alt="imagem" />
-				</a>
-				<p class="text-center">Teste de imagem</p>
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a class="thumbnail" href="img/frida.jpg">
-					<img class="img-thumbnail" src="img/frida.jpg" alt="imagem" />
-				</a>
-				<p class="text-center">Teste de imagem</p>
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-				<a class="thumbnail" href="img/maya.jpg">
-					<img class="img-thumbnail" src="img/maya.jpg" alt="imagem" />
-				</a>
-				<p class="text-center">Teste de imagem</p>
+				<p class="text-center">“Estamos juntas e somos muitas”- @ilustragabs</p>
 			</a>
+		</div>
+		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+			<a class="thumbnail" href="img/bruxas.jpg">
+				<img class="img-thumbnail" src="img/bruxas.jpg" alt="Mulher sorrindo usando batom preto e um chapéu "/>
+			</a>
+			<p class="text-center">“A humanidade sempre teve medo de mulheres que voam"- </p>
 		</a>
 	</div>
+	<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+		<a class="thumbnail" href="img/corpo.jpg">
+			<img class="img-thumbnail" src="img/corpo.jpg" alt="Três mulheres diferentes de costas usando biquínis" />
+		</a>
+		<p class="text-center">“O corpo ideal é o seu”- @helenamorani</p>
+	</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/uniao.jpg">
+		<img class="img-thumbnail" src="img/uniao.jpg" alt="Desenho de quatro mulheres diferentes olhando para frente." />
+	</a>
+	<p class="text-center"> “Juntas e aos poucos podemos mudar ”-@lela.brandao </p>
+</a>
 </div>
 </div>
-
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+			<a class="thumbnail" href="img/forte.jpg">
+				<img class="img-thumbnail" src="img/forte.jpg" alt="imagem" />
+			</a>
+			<p class="text-center">“Você é linda, forte e incrível”- @ilustragabs
+			</p>
+		</a>
+	</div>
+	<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+		<a class="thumbnail" href="img/cobrança.jpg">
+			<img class="img-thumbnail" src="img/cobrança.jpg" alt="imagem" />
+		</a>
+		<p class="text-center"> ”Não se sobrecarregue” -@colorlilas
+		</p>
+	</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/medida.jpg">
+		<img class="img-thumbnail" src="img/medida.jpg" alt="Desenho da cintura de uma mulher com uma fita métrica em volta, contendo a frase." />
+	</a>
+	<p class="text-center">"Isso não mede sua beleza"- @helenamoriani
+	</p>
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/frida2.jpg">
+		<img class="img-thumbnail" src="img/frida2.jpg" alt="imagem" />
+	</a>
+	<p class="text-center">"Eu pintei minha própria realidade”- Frida Kahlo</p>
+</a>
+</div>
+</div>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+			<a class="thumbnail" href="img/unica.jpg">
+				<img class="img-thumbnail" src="img/unica.jpg" alt="Desenho de uma placa de aviso contendo a frase" />
+			</a>
+			<p class="text-center"> “Você é única”@ilustragabs</p>
+		</a>
+	</div>
+	<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+		<a class="thumbnail" href="img/mulher.jpg">
+			<img class="img-thumbnail" src="img/mulher.jpg" alt="Desenho de uma mulher com um girassol desenhado em seu rosto." />
+		</a>
+		<p class="text-center">"Ser mulher é encontrar uma força imensa"- Felipo Rolim e Lari Pandori</p>
+	</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/superlativo.jpg">
+		<img class="img-thumbnail" src="img/superlativo.jpg" alt="Desenho de uma calcinha azul pendurada em um cabide" />
+	</a>
+	<p class="text-center">"Mulher é superlativo de força"- @penosadecona</p>
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/perdoe.jpg">
+		<img class="img-thumbnail" src="img/perdoe.jpg" alt="Ilustração de uma mulher abraçando seu reflexo no espelho." />
+	</a>
+	<p class="text-center">"Perdoe-se pelas coisas"-@sigocomfe
+	</p>
+</a>
+</div>
+</div>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+			<a class="thumbnail" href="img/saudemental.jpg">
+				<img class="img-thumbnail" src="img/saudemental.jpg" alt="imagem" />
+			</a>
+			<p class="text-center">"Você não é uma pessoa ruim"-@ilustragabs
+			</p>
+		</a>
+	</div>
+	<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+		<a class="thumbnail" href="img/liberdade.jpg">
+			<img class="img-thumbnail" src="img/liberdade.jpg" alt="Desenho de uma mulher com as costas nua." />
+		</a>
+		<p class="text-center"> "Que culpa eu tenho se minha liberdade te sufoca"- Rack
+		</p>
+	</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/carinho.jpg">
+		<img class="img-thumbnail" src="img/carinho.jpg" alt="Mulher cobrindo a boca com um buquê de flores brancas olhando para frente" />
+	</a>
+	<p class="text-center">"Seu corpo é seu lar" - @helenamorani</p>
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/dança.jpg">
+		<img class="img-thumbnail" src="img/dança.jpg" alt="Um cartaz contendo a frase" />
+	</a>
+	<p class="text-center">"Esperava se divertir"- EBC- Empresa Brasil de Comunicação
+	</p>
+</a>
+</div>
+</div>
+<div class="row">
+	<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+		<a class="thumbnail" href="img/simone.jpg">
+			<img class="img-thumbnail" src="img/simone.jpg" alt=“Desenho do rosto da escritora Simone de Beauvoir.”/>
+		</a>
+		<p class="text-center">"Que nada nos limite" Simone de Beauvoir</p>
+	</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/grl.jpeg">
+		<img class="img-thumbnail" src="img/grl.jpeg" alt="Ilustração de três mulheres diferentes de costas" />
+	</a>
+	<p class="text-center">"Respeita as mina" - Nath Araujo</p>
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/frida.jpg">
+		<img class="img-thumbnail" src="img/frida.jpg" alt="Desenho da artista Frida Kahlo ilustrando apenas seus olhos"/>
+	</a>
+	<p class="text-center">“Para que preciso de pés quando tenho asas para voar?”- Frida Kahlo
+	</p>
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/maya.jpg">
+		<img class="img-thumbnail" src="img/maya.jpg" alt="Desenho da escritora Maya Angelou olhando para frente." />
+	</a>
+	<p class="text-center">"Seria estúpido não estar do meu próprio lado"- @lela.brandao
+	</p>
+</a>
+</a>
+</div>
+</div>
+<div class="row">
+	<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+		<a class="thumbnail" href="img/força.jpg">
+			<img class="img-thumbnail" src="img/força.jpg" alt="Mulher de lado olhando para cima com flores ao redor do seu rosto"/>
+		</a>
+		<p class="text-center">"Existem mulheres fortes" -@lela.brandao
+		</p>
+	</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/sozinha.jpg">
+		<img class="img-thumbnail" src="img/sozinha.jpg" alt="Desenho de duas mãos juntas." />
+	</a>
+	<p class="text-center">"Você não está sozinha"- @helenamorani
+	</p>
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/amor.jpg">
+		<img class="img-thumbnail" src="img/amor.jpg" alt="Mulher segurando flores em frente ao rosto"/>
+	</a>
+	<p class="text-center">"Você merece todo o amor do mundo" - @helenamorani
+	</p>
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+	<a class="thumbnail" href="img/amar.jpg">
+		<img class="img-thumbnail" src="img/amar.jpg" alt="Mulher de biquíni sorrindo." />
+	</a>
+	<p class="text-center">"Amar seu corpo é uma revolução" - @lela.brandao
+	</p>
+</a>
+</a>
+</div>
+</div>
+</div>
 
 <div id="rodape">
 	<h3 class="texto_contato"> Contato </h3>
