--- a/depoimentos.html
+++ b/depoimentos.html
@@ -9,6 +9,12 @@
 	<link href="css/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	 <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
+ <script src="scripts/env.js"> </script>
+  <script src="scripts/script.js"> </script>
+
 </head>
 <body>
 	<div class="titulo">
@@ -48,6 +54,32 @@
 		</div>
 		
 	</nav>
+	<div class="container">
+		<div class="row">
+			<ul class="navbar-nav m r-auto">
+				<li class="nav-item active">
+					<a class="botao nav-link" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="botao nav-link" href="depoimentos.html">Publicar anonimamente<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="botao nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-10">
+      <form onsubmit="gravarDepoimento(this)">
+				<div class="form-group">
+					<label for="exampleFormControlTextarea1">Exemplo de textarea</label>
+					<textarea class="form-control" id="depoimento" rows="10"></textarea>
+				</div>
+				<button type="submit" class="btn btn-primary">Publicar</button>
+			</form>
+		</div>
+	</div>
 
 	<div id="rodape">
 		<h3 class="texto_contato"> Contato </h3>
