--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav m r-auto">
 			<li class="nav-item active">
-				<a class="nav-link" href="conta.html">Conta<span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item active">
 				<a class="nav-link" href="depoimentos.html">Depoimentos<span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item active">
@@ -41,6 +38,9 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
 				</li>
+				<li class="nav-item active">
+				<a class="nav-link" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
+			</li>
 			</ul>
 		</div>
 		
