--- a/galeria.html
+++ b/galeria.html
@@ -22,27 +22,33 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav m r-auto">
-			<li class="nav-item active">
+			<li class="nav-item ">
 				<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
 			</li>
-			<li class="nav-item active">
+			<li class="nav-item ">
 				<a class="nav-link" href="depoimentos.html">Depoimentos<span class="sr-only">(current)</span></a>
 			</li>
-			<li class="nav-item active">
-				<a class="nav-link" href="conta.html">Conta<span
+			<li class="nav-item ">
+				<a class="nav-link" href="mulheres.html">Leis e Direitos das Mulheres<span
 					class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="mapa.html">Mapeamento<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="mulheres.html">Leis e Direitos das Mulheres<span class="sr-only">(current)</span></a>
+				<li class="nav-item ">
+					<a class="nav-link ativo" href="galeria.html">Galeria<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="#rodape">Contato<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item ">
+					<a class="nav-link" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item ">
+					<a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 		</div>
