--- a/mulheres.html
+++ b/mulheres.html
@@ -22,27 +22,33 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav m r-auto">
-			<li class="nav-item active">
+			<li class="nav-item ">
 				<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
 			</li>
-			<li class="nav-item active">
+			<li class="nav-item ">
 				<a class="nav-link" href="depoimentos.html">Depoimentos<span class="sr-only">(current)</span></a>
 			</li>
-			<li class="nav-item active">
-				<a class="nav-link" href="conta.html">Conta<span
+			<li class="nav-item ">
+				<a class="nav-link ativo" href="mulheres.html">Leis e Direitos das Mulheres<span
 					class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="mapa.html">Mapeamento<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="galeria.html">Galeria<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="#rodape">Contato<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item ">
+					<a class="nav-link" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item ">
+					<a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 		</div>
@@ -67,14 +73,59 @@
 		O <mark>assédio sexual</mark> caracteriza-se pelo não consentimento da vítima na realização de um ação ou ato sexual, este tipo inclui desde o contato físico em si até um comentário classificado como pejorativo na intenção de praticar o ato. Já existe uma lei no Brasil para  punir quem comete tal crime
 	</h3>
 	<br>
-</div>
+	<h2 class="subtitulo">Leis para as mulheres</h2>
+	<h3 class="texto_padrao"> Art. 373-B. É proibido o assédio à mulher no ambiente de trabalho, assim considerada qualquer conduta abusiva relacionada à sua condição de gênero e que, de forma repetitiva e prolongada, exponha a trabalhadora a situações humilhantes ou constrangedoras, em ofensa a sua dignidade e integridade psíquica. 
+		<br><br>
+		Art. 389-A. Toda empresa deverá estruturar setor de apoio a mulheres vítimas de assédio no ambiente de trabalho, atendendo às seguintes condições mínimas:
+		I – manutenção de equipe profissional especializada para o atendimento psicológico, garantindo-se a privacidade da denunciante e o sigilo das informações fornecidas; 
+		<br><br>
+		II – instalação de serviço de contato telefônico e ambiente virtual para possibilitar a denúncia anônima, na hipótese de a mulher preferir não se apresentar pessoalmente;
+		<br><br>
+		III – autonomia para apuração sumária da denúncia e, verificando-se indícios da existência do fato e da autoria, afastamento imediato ou transferência do assediador para outro setor, até completo esclarecimento da situação. 
+		<br><br>
+		§ 1º. A empresa deverá realizar atividades e palestras de prevenção ao assédio, com periodicidade semestral, em data de sua conveniência e durante o horário de trabalho, visando à presença de todos os empregados. 
+		<br><br>
+		§ 2º. O descumprimento do disposto neste artigo ensejará o pagamento de multa, nos termos do regulamento, sem prejuízo das sanções cíveis e penais aplicáveis.
+		<br><br>
+		Art. 2º. Esta lei entra em vigor noventa dias após sua publicação.
+		<br><br>
+		<h2 class="subtitulo">Plataformas semelhantes</h2>
+		<h3 class="texto_padrao"><a href= "https://www.sosmulher.sp.gov.br/">SOS Mulheres</a>- O SOS MULHER é focado no apoio à mulher em situação de vulnerabilidade e tem como base três pilares: segurança, saúde e independência financeira.
+			<br>
+			A plataforma é uma ampliação do projeto que foi iniciado em março de 2019 pelo Governo do Estado com o lançamento do aplicativo que permite que as vítimas de violência doméstica peçam ajuda para polícia apertando apenas um botão do celular por cinco segundos.
+			<br>
+		Nesta etapa serão disponibilizadas orientações importantes sobre assuntos que visam garantir proteção em relação às principais formas de violência listadas na Lei Maria da Penha: física, psicológica, moral, sexual e patrimonial.</h3>
+		<br>
+		<h3 class="texto_padrao"><a href= "https://associacaofalamulher.wixsite.com/associacaofalamulher">Associação Fala Mulher</a>-A psicóloga e teóloga Suzanne Marie Mailloux, de nacionalidade canadense, veio para o Brasil, em 1995, com o objetivo de desenvolver trabalhos sociais, em São Paulo. No desenrolar do trabalho, Suzanne observou o contexto de violência doméstica vivenciado por algumas crianças e mulheres, o que a motivou, a partir de uma perspectiva de gênero, a se aprofundar na seara das relações domésticas e familiares. Como fruto desse aprofundamento, em 2004, Suzanne, reunida com outras mulheres fundou a Associação Fala Mulher.
+		<br>
+		<h3 class="texto_padrao"><a href= "https://casadeisabel.org.br/">Casa da Isabel</a>-Em conformidade com o Estatuto Social da Organização  Art. 2°, II – “A CASA DE ISABEL tem por objetivo fomentar ou realizar atividades de Promoção, Proteção e Assistência à Saúde e Especialidades, sem Finalidades Lucrativas, através das ações de pesquisa, ensino, entre outras ações sociais, de forma contínua de caráter comunitário. Através de parcerias com Órgãos Públicos e Entidades congêneres. Realizando ações a Projetos especiais voltados à Promoção, Proteção e Recuperação de pessoas com Transtornos decorrentes do Abuso de Substâncias Psicoativas.
+		<br>
+		<h3 class="texto_padrao"><a href= "https://www.mapadoacolhimento.org/">Mapa do Acolhimento</a>-Somos uma rede de solidariedade que conecta mulheres que sofrem ou sofreram violência de gênero a psicólogas e advogadas dispostas a ajudá-las de forma voluntária. 
+		<br>
+		<h3 class="texto_padrao"><a href= "https://www.meteacolher.org/">Mete a colher</a>
 
-<div id="rodape">
-	<h3 class="texto_contato"> Contato </h3>
-	<a href="mailto:contatoisy.site@gmail.com"> 
-		<img src="img/email.svg" id="imge"> 
-		<p id="textoR">Envie um e-mail para ISY</p>
-	</a>
 
-</div>
-</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+		</div>
+
+		<div id="rodape">
+			<h3 class="texto_contato"> Contato </h3>
+			<a href="mailto:contatoisy.site@gmail.com"> 
+				<img src="img/email.svg" id="imge"> 
+				<p id="textoR">Envie um e-mail para ISY</p>
+			</a>
+
+		</div>
+	</body>
