--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<meta charset="UTF-8">
-	<title>ISY</title>
-	<link rel="icon" type="imagem/png" href="img/icon.png"/>
-	<link href="css/style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<meta charset="UTF-8">
+<title>ISY</title>
+<link rel="icon" type="imagem/png" href="img/icon.png"/>
+<link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 	<div class="titulo">
@@ -19,28 +19,34 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav m r-auto">
-			<li class="nav-item active">
+			<li class="nav-item ">
+				<a class="nav-link ativo" href="index.html">Home<span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item ">
 				<a class="nav-link" href="depoimentos.html">Depoimentos<span class="sr-only">(current)</span></a>
 			</li>
-			<li class="nav-item active">
+			<li class="nav-item ">
 				<a class="nav-link" href="mulheres.html">Leis e Direitos das Mulheres<span
 					class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="mapa.html">Mapeamento<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="galeria.html">Galeria<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="#rodape">Contato<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
-				<a class="nav-link" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
-			</li>
+				<li class="nav-item ">
+					<a class="nav-link" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item ">
+					<a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
+				</li>
 			</ul>
 		</div>
 		
