--- a/login.html
+++ b/login.html
@@ -33,32 +33,38 @@
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+ <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav m r-auto">
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="depoimentos.html">Depoimentos<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="mulheres.html">Leis e Direitos das Mulheres<span
           class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item ">
           <a class="nav-link" href="mapa.html">Mapeamento<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item ">
           <a class="nav-link" href="galeria.html">Galeria<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item ">
           <a class="nav-link" href="#rodape">Contato<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item ">
           <a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link ativo" href="login.html">Login<span class="sr-only">(current)</span></a>
+        </li>
       </ul>
-    </div> 
+    </div>
   </nav>
   <div class="container-fluid">
     <div class="conta">
