--- a/depoimentos.html
+++ b/depoimentos.html
@@ -9,7 +9,8 @@
 	<link href="css/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/solid.css" integrity="sha384-LA8Ug4T/nhVkyhrSmSirsoAo9iDrBk8E7U80aSPeD+w3vO8PzOJIS6agGcbIwwX0" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/fontawesome.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">	<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
 	<script src="scripts/env.js"> </script>
@@ -84,8 +85,10 @@
 				<button type="submit" class="btn btn-primary">Publicar</button>
 			</form>
 		</div>
+		<div id="depoimentos"> 
+		</div>
 	</div>
-	<div class="col-12" id="depoimentos">
+	<div class="col-12">
 		<h1>
 		</div>
 		<div id="rodape">
