--- a/galeria.html
+++ b/galeria.html
@@ -66,7 +66,7 @@
 			<a class="thumbnail" href="img/bruxas.jpg">
 				<img class="img-thumbnail" src="img/bruxas.jpg" alt="Mulher sorrindo usando batom preto e um chapéu "/>
 			</a>
-			<p class="text-center">“A humanidade sempre teve medo de mulheres que voam"- </p>
+			<p class="text-center">“A humanidade sempre teve medo de mulheres"- @helenamorani</p>
 		</a>
 	</div>
 	<div class="col-lg-3 col-md-4 col-xs-6 thumb">
