--- a/login.html
+++ b/login.html
@@ -71,11 +71,11 @@
       <form onsubmit="autenticar(this)">
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" class="form-control" id="email"  placeholder="Digite seu email" required>
+          <input type="email" class="form-control" id="email"  placeholder="E-mail" required>
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" required>
+          <label for="password">Senha</label>
+          <input type="password" class="form-control" id="password" placeholder="Senha" required>
         </div>
         
         <button type="submit" class="btn btn-primary">Enviar</button>
