--- a/conta.html
+++ b/conta.html
@@ -71,19 +71,19 @@
       <form onsubmit="enviaformulario(this)">
         <div class="form-group">
           <label for="Nome">Nome</label>
-          <input type="text" class="form-control" id="nome"  placeholder="Digite seu nome" required>
+          <input type="text" class="form-control" id="nome"  placeholder="Nome" required>
         </div>
         <div class="form-group">
           <label for="idade">Idade</label>
           <input type="number" class="form-control" id="idade" placeholder="Idade" required>
         </div>
         <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" id="email"  placeholder="Digite seu email" required>
+          <label for="email">E-mail</label>
+          <input type="email" class="form-control" id="email"  placeholder="E-mail" required>
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" required>
+          <label for="password">Senha</label>
+          <input type="password" class="form-control" id="password" placeholder="Senha" required>
         </div>
         
         <button type="submit" class="btn btn-primary">Enviar</button>
