--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
 	</nav>
 	<div class="container">
 		<div class="row">
+			<h3 class="texto_padrao">Venha interagir com outras mulheres através do nosso <a class= "link" href = "depoimentos.html">feed de depoimentos</a> conhecendo e compartilhando experiências! </h3>
 			<video controls class="video"> 
 				<source src="video/isy.mp4" type="video/mp4"/>
 			</video>
 			<br>
 			<h3 class="texto_padrao">Nossa plataforma foi criada pensando na convivência das mulheres na sociedade, buscando amenizar  problemas relacionados ao assédio, promovendo apoio umas as outras  em um local onde possam se sentir confortáveis para conversar.
-			O site será usado na colaboração da denúncia e no diálogo entre mulheres que buscam ajuda </h3>
+			O site será usado na colaboração da denúncia e no diálogo entre mulheres que buscam ajuda. </h3>
 			<br>
 		</div>
 	</div>
